--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 {% block title %}首頁 - 檢驗報告減肥器{% endblock %}
 
 {% block content %}
-<h3 class="mb-4">檢驗報告減肥器</h3>
+<h3 class="mb-4">HIS4 出院病摘檢驗報告減肥器</h3>
 <form id="reportForm">
     <div class="mb-3">
         <label for="reportText" class="form-label">請輸入檢驗報告:</label>
