--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-success">
         <div class="container">
-            <a class="navbar-brand" href="{{ url_for('index') }}">檢驗報告減肥器</a>
+            <a class="navbar-brand" href="{{ url_for('index') }}">HIS4 省時省力小工具</a>
         </div>
     </nav>
 
@@ -21,7 +21,7 @@
 
     <footer class="bg-light py-3 mt-auto">
         <div class="container">
-            <p class="text-center">&copy; 2024 檢驗報告減肥器. All rights reserved.</p>
+            <p class="text-center">&copy; HIS4 省時省力小工具. All rights reserved.</p>
         </div>
     </footer>
 
